Skeleton of the website defined

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,9 +8,12 @@
   "whatIsMaatool": "What is MAA Tool?",
   "maatoolIsAWebBasedTool": "MAA Tool is a web-based tool that supports the design and implementation of multi-actor approaches in the context of sustainable development.",
   "flexible": "Flexible",
+  "flexibleDescription": "Easily adapts to various needs and scenarios, ensuring versatility in every situation.",
   "userFriendly": "User-friendly",
+  "userFriendlyDescription": "Designed with simplicity in mind, making it intuitive and easy to use for everyone.",
   "interactive": "Interactive",
-  "whoAreWe": "Who are we?",
+  "interactiveDescription": "Engages users with dynamic features for a more engaging and responsive experience.",
+  "whoWeAre": "Who we are?",
   "maatoolIsDeveloped": "MAA Tool is developed by Social Innolabs, a non-profit foundation that aims to serve as a catalyst between technology and society through the promotion of collaboration among different actors for the development of products that improve the quality of life of citizens.",
   "requestInfo": "Request information",
   "contactUs": "Contact us",
